--- a/MyLocations/Base.lproj/Main.storyboard
+++ b/MyLocations/Base.lproj/Main.storyboard
@@ -345,6 +345,51 @@
             </objects>
             <point key="canvasLocation" x="868" y="411"/>
         </scene>
+        <!--Map-->
+        <scene sceneID="cXH-qb-Gos">
+            <objects>
+                <viewController id="OfR-di-ePB" customClass="MapViewController" customModule="MyLocations" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Nd0-Vl-F3r">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" id="XNY-er-uFP">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="OfR-di-ePB" id="wWW-79-weW"/>
+                                </connections>
+                            </mapView>
+                            <navigationBar contentMode="scaleToFill" id="uQb-TO-Wfu">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Map" id="Irh-6L-fwQ">
+                                        <barButtonItem key="leftBarButtonItem" title="Locations" id="RHp-mJ-JrL">
+                                            <connections>
+                                                <action selector="showLocations" destination="OfR-di-ePB" id="bNR-wK-BGw"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="User" id="V5e-K4-7Qs">
+                                            <connections>
+                                                <action selector="showUser" destination="OfR-di-ePB" id="dYS-Dx-NFi"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Map" id="kRN-rS-dIq"/>
+                    <connections>
+                        <outlet property="mapView" destination="XNY-er-uFP" id="AC7-bW-ww3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rQA-1G-Kus" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2" y="1134"/>
+        </scene>
         <!--Locations-->
         <scene sceneID="oRF-az-gCG">
             <objects>
@@ -416,6 +461,7 @@
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="v8q-eU-Kj1" kind="relationship" relationship="viewControllers" id="Tad-he-Qvz"/>
+                        <segue destination="OfR-di-ePB" kind="relationship" relationship="viewControllers" id="Rd4-LM-zog"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
